--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,10 +17,14 @@ jobs:
       - uses: actions/checkout@v2
       - run: php generate.php
         name: Set current Year
-      - uses: r7kamura/weneedfeed-action@v3.6.0
+      - uses: ruby/setup-ruby@v1
         with:
-          base_url: https://captnemo.in/npci-rss-feeds
+          ruby-version: 3.0
+          bundler-cache: true
+      - run: bundle exec weneedfeed build --base-url="https://captnemo.in/npci-rss"
+        name: Generate RSS Feeds
       - uses: peaceiris/actions-gh-pages@v3
+        name: Publish to GitHub Pages
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: output
