Run using ruby3.0
This fixes us to old Psych
https://stackoverflow.com/a/71192990/368328

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,7 +19,7 @@ jobs:
         name: Set current Year
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0
+          ruby-version: "3.0"
           bundler-cache: true
       - run: bundle exec weneedfeed build --base-url="https://captnemo.in/npci-rss"
         name: Generate RSS Feeds
