--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,10 +21,14 @@ jobs:
         with:
           ruby-version: "3.0"
           bundler-cache: true
-      - run: bundle exec weneedfeed build --base-url="https://captnemo.in/npci-rss"
-        name: Generate RSS Feeds
+      - name: Generate RSS Feeds
+        run: bundle exec weneedfeed build --base-url="https://captnemo.in/npci-rss-feeds"
       - uses: peaceiris/actions-gh-pages@v3
         name: Publish to GitHub Pages
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: output
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          force_orphan: true
+          commit_message: Automatic Update
