switch to python

--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
-User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36
 .common_selectors: &selector
-  item_selector: '#year__YEAR__ .pdf-item'
+  item_selector: '.pdf-item'
   item_description_selector: p
   item_link_selector: a:nth-child(1)
   item_title_selector: p:nth-child(2)
+base-url: "https://captnemo.in/npci-rss-feeds/"
 pages:
   - <<: *selector
     id: upi
@@ -50,11 +50,11 @@ pages:
     title: AePS Circulars
     description: "NPCI AePS Circulars"
     url: "https://www.npci.org.in/what-we-do/aeps/circulars"
-  # - <<: *selector
-  #   id: bhim-aadhaar
-  #   title: BHIM Aadhaar Circulars
-  #   description: "NPCI BHIM Aadhaar Circulars"
-  #   url: "https://www.npci.org.in/what-we-do/bhim-aadhaar/circular"
+  - <<: *selector
+    id: bhim-aadhaar
+    title: BHIM Aadhaar Circulars
+    description: "NPCI BHIM Aadhaar Circulars"
+    url: "https://www.npci.org.in/what-we-do/bhim-aadhaar/circular"
   - <<: *selector
     id: e-rupi
     title: e-RUPI Circulars
